--- a/my_app/templates/index.html
+++ b/my_app/templates/index.html
@@ -1,11 +1,8 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <title>Timer</title>
-  </head>
-  <body>
-    <h1>timer</h1>
+{% extends "base.html" %}
+{% load staticfiles %}
 
-  </body>
-</html>
+{% block content %}
+<div class="container">
+  <h1>Please <a href="{% url 'login' %}">login</a></h1>
+</div>
+{% endblock %}
